syntax = "proto3";
package cometbft.services.block_results.v2;

import "cometbft/abci/v2/types.proto";
import "cometbft/types/v2/params.proto";

option go_package = "github.com/cometbft/cometbft/api/cometbft/services/block_results/v2";

// GetBlockResults is a request for the BlockResults of a given height.
message GetBlockResultsRequest {
  int64 height = 1;
}

// GetBlockResultsResponse contains the block results for the given height.
message GetBlockResultsResponse {
  int64    height                                                   = 1;
  repeated cometbft.abci.v2.ExecTxResult tx_results                 = 2;
  repeated cometbft.abci.v2.Event finalize_block_events             = 3;
  repeated cometbft.abci.v2.ValidatorUpdate validator_updates       = 4;
  cometbft.types.v2.ConsensusParams         consensus_param_updates = 5;
  bytes                                     app_hash                = 6;
}
